--- a/MIQ-Booking-Assistance/package.json
+++ b/MIQ-Booking-Assistance/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "miq-booking-helper",
+  "name": "miq-nz-booking-tools",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
