Restored the ability to use npm start to just run without electron.

--- a/MIQ-Booking-Assistance/package.json
+++ b/MIQ-Booking-Assistance/package.json
@@ -4,7 +4,8 @@
   "description": "A tool to help you book MIQ",
   "main": "main.js",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "npx run-func miq-assistance.js start",
+    "start-electron": "electron-forge start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "electron-forge package",
     "make": "electron-forge make"
