--- a/MIQ-Booking-Assistance/package.json
+++ b/MIQ-Booking-Assistance/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "miq-nz-booking-tools",
-  "version": "1.0.0",
+  "name": "miq-nz-booking-assistance",
+  "version": "0.9.0",
   "description": "A tool to help you book MIQ",
   "main": "main.js",
   "scripts": {
