Untested attempt on automated releases

--- a/MIQ-Booking-Assistance/package.json
+++ b/MIQ-Booking-Assistance/package.json
@@ -8,7 +8,8 @@
     "start-electron": "electron-forge start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
   },
   "author": "github contributors",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.57",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.57",
     "@electron-forge/maker-zip": "^6.0.0-beta.57",
+    "@electron-forge/publisher-github": "^6.0.0-beta.58",
     "electron": "^13.1.6",
     "electron-squirrel-startup": "^1.0.0"
   },
@@ -49,6 +51,17 @@
         {
           "name": "@electron-forge/maker-rpm",
           "config": {}
+        }
+      ],
+      "publishers": [
+        {
+          "name": "@electron-forge/publisher-github",
+          "config": {
+            "repository": {
+              "owner": "jvolker",
+              "name": "miq-nz-booking-tools"
+            }
+          }
         }
       ]
     }
